# FlappyBird

./: CMakeLists.txt
src/: main.cpp
src/GameElements/: Bird.cpp  Bird.h  Hitbox.cpp  Hitbox.h  Pipe.cpp  Pipe.h
src/Resourses/: Animation.cpp  Animation.h  ResourceManager.cpp  ResourceManager.h
